Fixed overflow error

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,7 +5,7 @@
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -19,7 +19,7 @@ body {
     height: 550px;
     perspective: 1000px;
   }
-  
+
   .flashcard-inner {
     position: relative;
     width: 100%;
@@ -27,33 +27,22 @@ body {
     transition: transform 0.7s;
     transform-style: preserve-3d;
   }
-  
+
   .flashcard-flipped {
     transform: rotateY(180deg);
   }
-  
+
   .flashcard-front,
   .flashcard-back {
     position: absolute;
-    width: 100%;
-    height: 100%;
     backface-visibility: hidden;
-    border-radius: 10px;
-    border: 3px solid black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    background: linear-gradient(to bottom, #0147aa, #001738);
   }
-  
+
 
 .flashcard-back {
-    transform: rotateY(180deg);
-    transform-style: preserve-3d;
-}  
-  
+  transform: rotateY(180deg);
+}
+
   .top-blur {
     position: absolute;
     left: -20px;
@@ -65,7 +54,7 @@ body {
     border-radius: 100%;
     filter: blur(100px);
   }
-  
+
   .bottom-blur {
     position: absolute;
     bottom: -60px;
